<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="12dp"
    app:cardUseCompatPadding="true"
    android:elevation="8dp"
    app:contentPadding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_reservation"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:id="@+id/c_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c_name"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:id="@+id/c_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c_guests"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:id="@+id/c_special"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c_special_request"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:id="@+id/c_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c_payment_preference"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:id="@+id/c_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c_date"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:id="@+id/c_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c_time"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="16dp">

            <Button
                android:id="@+id/yes_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/green"
                android:text="@string/confirm_table"
                android:textSize="17sp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/white" />

            <Button
                android:id="@+id/exit_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/exit"
                android:textColor="@color/primary_red"
                android:textSize="17sp"
                android:backgroundTint="@color/white" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>

