<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reserveLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="32dp"
    android:background="@color/white">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/restaurant_logo"
        android:src="@drawable/restaurant_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/title_reserve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_a_reservation"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:shadowColor="#80000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:textStyle="bold"
        android:layout_marginStart="14dp"
        app:layout_constraintStart_toEndOf="@id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/logo"/>

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/baseline_arrow_back_24"
        android:contentDescription="@string/back_to_main_screen"
        app:layout_constraintBottom_toBottomOf="@id/title_reserve"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        app:layout_constraintStart_toEndOf="@id/title_reserve"
        app:layout_constraintTop_toTopOf="@id/title_reserve"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:text="@string/name_for_the_reservation"
        android:textSize="18sp"
        android:layout_marginTop="10dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/primary_red"
        app:hintTextColor="@color/black"
        android:hint="@string/full_name"
        app:errorEnabled="true"
        app:layout_constraintStart_toEndOf="@+id/nameLabel"
        app:layout_constraintTop_toBottomOf="@id/nameLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/seatsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/textField"
        app:layout_constraintTop_toBottomOf="@id/textField"
        android:text="@string/select_seats"
        android:textSize="18sp" />

    <NumberPicker
        android:id="@+id/numberPicker"
        android:layout_width="wrap_content"
        android:layout_height="83dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seatsLabel" />
    <TextView
        android:id="@+id/vegLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numberPicker"
        android:text="@string/special_requests"
        android:textSize="18sp"
        android:layout_marginTop="10dp"/>
    <ImageView
        android:id="@+id/veganSelectedImage"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/vegan"
        android:contentDescription="@string/vegan_leaf_icon"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/vegLabel"
        app:layout_constraintBottom_toBottomOf="@+id/vegLabel"
        app:layout_constraintTop_toTopOf="@+id/vegLabel"
        android:layout_marginStart="14dp"
        />
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vegLabel">
        <RadioButton
            android:id="@+id/vegan"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:enabled="true"
            app:useMaterialThemeColors="false"
            app:buttonTint="@color/green"
            android:text="@string/vegan"/>

        <RadioButton
            android:id="@+id/notVegan"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:buttonTint="@color/green"
            app:useMaterialThemeColors="false"
            android:layout_marginHorizontal="20dp"
            android:checked="false"
            android:enabled="true"
            android:text="@string/no_vegan"/>
    </RadioGroup>
    <TextView
        android:id="@+id/paymentLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        android:text="@string/payment_method"
        android:textSize="18sp"
        android:layout_marginTop="10dp"/>

    <Spinner
        android:id="@+id/paymentSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/paymentLabel" />

    <TextView
        android:id="@+id/timeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reservation_time"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/paymentSpinner"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/timePickerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/select_date"
        android:padding="10dp"
        android:textSize="15sp"
        app:drawableEndCompat="@drawable/ic_launcher_calendar_foreground"
        app:layout_constraintTop_toBottomOf="@+id/timeLabel"
        app:layout_constraintStart_toStartOf="parent"/>
    <Button
        android:id="@+id/approveTableBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"
        android:backgroundTint="@color/primary_red"
        android:padding="10dp"
        android:text="@string/reserve_sits"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/timePickerBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <ImageView
        android:id="@+id/img_circle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/green_circle"
        android:visibility="gone"
        android:elevation="4dp"
        android:contentDescription="@string/green_circle"
        android:layout_marginBottom="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageView
        android:id="@+id/img_v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher_v_foreground"
        android:visibility="gone"
        android:elevation="4dp"
        android:layout_marginBottom="300dp"
        android:contentDescription="@string/v_shape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/thanks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/thanks_order"
        android:textSize="20sp"
        android:visibility="gone"
        android:textStyle="bold|italic"
        android:gravity="center"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/img_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>