<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardUseCompatPadding="true"
        android:elevation="8dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/cardImage"
                android:layout_width="150dp"
                android:layout_height="120dp"
                android:src="@drawable/pizza_margarita"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/cardTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pizza_margarita"
                android:maxLines="2"
                android:ellipsize="none"
                android:textStyle="bold"
                android:textSize="18sp"
                android:paddingVertical="8dp"
                app:layout_constraintEnd_toStartOf="@+id/cardPrice"
                app:layout_constraintStart_toEndOf="@id/cardImage"
                app:layout_constraintTop_toTopOf="parent"
                />
            <TextView
                android:id="@+id/cardPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/green_background"
                android:text="@string/margarita_price"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="12sp"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/cardDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/margarita_description"
                android:textColor="@color/dark_gray"
                android:textSize="15sp"
                android:paddingVertical="4dp"
                app:layout_constraintStart_toEndOf="@id/cardImage"
                app:layout_constraintTop_toBottomOf="@+id/cardTitle"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingEnd="4dp"
                />
            <ImageView
                android:id="@+id/cardVegan"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/vegan"
                android:visibility="invisible"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>